--- a/open.qdu.edu.cn/appoint_search/index.html
+++ b/open.qdu.edu.cn/appoint_search/index.html
@@ -15,7 +15,7 @@
           rel="stylesheet"/>
 </head>
 <body>
-	<div>
+	<div id="form">
 		富强 民主 文明 和谐 <br>
 		自由 平等 公正 法制 <br>
 		爱国 敬业 诚信 友善 <br>
@@ -55,6 +55,7 @@
 				document.getElementById("ptime").innerHTML=stime;
 				document.getElementById("btime").innerHTML=stime;
 				document.getElementById("pdate").innerHTML=sdate;
+				document.getElementById("form").style.display="none";
 			}
 		</script>
 	</div>
