--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 	<h1>
         <a href="open.qdu.edu.cn/appoint_search/index.html">点此跳转</a>
     </h1>
+    <hi>
+        <a href="https://github.com/charlesix59/QDU_NAT_self_book">如果觉得好用就来GitHub给我点个star吧</a>
+    </hi>
 </body>
 </html>
