--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
 	<h1>
         <a href="open.qdu.edu.cn/appoint_search/index.html">点此跳转</a>
     </h1>
-    <hi>
+    <h1>
+        <a href="open.qdu.edu.cn/appoint_search/volunteer.html">点此跳转志愿者界面</a>
+    </h1>
+    <h2>
+        注：志愿者界面信息与主页同步，请先填写主页信息
+    </h2>
+    <h1>
         <a href="https://github.com/charlesix59/QDU_NAT_self_book">如果觉得好用就来GitHub给我点个star吧</a>
-    </hi>
+    </h1>
 </body>
 </html>
