--- a/open.qdu.edu.cn/appoint_search/index.html
+++ b/open.qdu.edu.cn/appoint_search/index.html
@@ -66,7 +66,7 @@
 				background-position: top;
 				border-radius: inherit;
 				opacity: .1;
-				background-image: url(/static/img/qdu.png);
+				background-image: url(../static/img/qdu.png);
 				background-repeat: repeat;
 			}
 
@@ -189,7 +189,12 @@
 					document.getElementById("pclass").innerHTML = sclass;
 					document.getElementById("ptime").innerHTML = stime;
 					document.getElementById("btime").innerHTML = stime;
+					document.getElementById("ntime").innerHTML = stime;
 					document.getElementById("pdate").innerHTML = sdate;
+					var shuiyins=document.getElementsByClassName("shuiyin-item");
+					for (var i=0;i<shuiyins.length;i++){
+						shuiyins[i].innerHTML = sid;
+					}
 					document.getElementById("form").style.display = "none";
 				}
 			</script>
@@ -249,18 +254,28 @@
 			<div class="weui-cel">
 				<div class="weui-cell__bd">
 					<div>
-
+						<div class="shuiyin">
+							<div class="shuiyin-item">2020203222</div>
+							<div class="shuiyin-item">2020203222</div>
+							<div class="shuiyin-item">2020203222</div>
+							<div class="shuiyin-item">2020203222</div>
+							<div class="shuiyin-item">2020203222</div>
+							<div class="shuiyin-item">2020203222</div>
+							<div class="shuiyin-item">2020203222</div>
+							<div class="shuiyin-item">2020203222</div>
+						</div>
 						<div
 							style="display: flex;align-items: center;align-content: center;justify-content: center;justify-items: center;flex-direction: column">
+							<div style="font-size: 16pt;color: red" id="ntime">16:00-16:30</div>
 							<div style="font-size: 22pt;color: red" id="time">截图无效</div>
-							<div id="qrcode_4045" class="animate__animated animate__heartBeat animate__infinite"></div>
+							<div id="qrcode_4045" class="animate__animated animate__wobble animate__infinite"></div>
 						</div>
 						<script type="text/javascript">
 							var qrcode = new QRCode(document.getElementById("qrcode_4045"), {
 								text: "qdu_open|appoint_nc|" + "4045" + "|" + "2020203222",
 								width: 256,
 								height: 256,
-								colorDark: "#008100",
+								colorDark: "#000081",
 								colorLight: "#ffffff",
 								correctLevel: QRCode.CorrectLevel.H
 							});
