--- a/open.qdu.edu.cn/appoint_search/index.html
+++ b/open.qdu.edu.cn/appoint_search/index.html
@@ -222,7 +222,7 @@
 				<div class="weui-cell__bd">
 					<p>姓名</p>
 				</div>
-				<div class="weui-cell__ft" id="pid">武靖一</div>
+				<div class="weui-cell__ft" id="pname">武靖一</div>
 			</div>
 			<div class="weui-cell">
 				<div class="weui-cell__bd">
