添加服务器

--- a/open.qdu.edu.cn/appoint_search/index.html
+++ b/open.qdu.edu.cn/appoint_search/index.html
@@ -319,6 +319,7 @@
 		</a>
 
 		<div class="weui-footer">
+			<p class="weui-footer__text">服务器:open.qdu.edu.cn(7)</p>
 			<p class="weui-footer__text">Copyright © 2018-2022 青岛大学</p>
 		</div>
 		<script src=../static/js/jquery.min.js></script>
