--- a/open.qdu.edu.cn/appoint_search/index.html
+++ b/open.qdu.edu.cn/appoint_search/index.html
@@ -263,11 +263,13 @@
 							<div class="shuiyin-item">2020203222</div>
 							<div class="shuiyin-item">2020203222</div>
 						</div>
+						<div class="sectionBox">
 						<div
 							style="display: flex;align-items: center;align-content: center;justify-content: center;justify-items: center;flex-direction: column">
 							<div style="font-size: 16pt;color: red" id="ntime">16:00-16:30</div>
 							<div style="font-size: 22pt;color: red" id="time">截图无效</div>
 							<div id="qrcode_4045" class="animate__animated animate__wobble animate__infinite"></div>
+						</div>
 						</div>
 						<div class="bg-icon"></div>
 						<script type="text/javascript">
