--- a/open.qdu.edu.cn/appoint_search/index.html
+++ b/open.qdu.edu.cn/appoint_search/index.html
@@ -268,7 +268,7 @@
 						<div
 							style="display: flex;align-items: center;align-content: center;justify-content: center;justify-items: center;flex-direction: column">
 							<div style="font-size: 16pt;color: red" id="ntime">16:00-16:30</div>
-							<div style="font-size: 22pt;color: red" id="time">截图无效</div>
+							<div style="font-size: 22pt;color: red" id="time">个人情况预约</div>
 							<div id="qrcode_4045" class="animate__animated animate__wobble animate__infinite"></div>
 						</div>
 							<div class="bg-icon"></div>
@@ -278,14 +278,14 @@
 								text: "qdu_open|appoint_nc|" + "4045" + "|" + "2020203222",
 								width: 256,
 								height: 256,
-								colorDark: "#008100",
+								colorDark: "##01AA1B",
 								colorLight: "#ffffff",
 								correctLevel: QRCode.CorrectLevel.H
 							});
 			 		</script>
 						<div class="weui-cel">
 						</div>
-						<script>
+<!-- 						<script>
 							function showTime() {
 								var date = new Date();
 
@@ -307,7 +307,7 @@
 									minute + ':' + '<div style="font-size:22pt;color:green">' + second + "</div></div>";
 							}
 							setInterval('showTime()', 1000);
-						</script>
+						</script> -->
 					</div>
 				</div>
 			</div>
