--- a/open.qdu.edu.cn/appoint_search/index.html
+++ b/open.qdu.edu.cn/appoint_search/index.html
@@ -278,7 +278,7 @@
 								text: "qdu_open|appoint_nc|" + "4045" + "|" + "2020203222",
 								width: 256,
 								height: 256,
-								colorDark: "##01AA1B",
+								colorDark: "#01AA1B",
 								colorLight: "#ffffff",
 								correctLevel: QRCode.CorrectLevel.H
 							});
