--- a/open.qdu.edu.cn/appoint_search/index.html
+++ b/open.qdu.edu.cn/appoint_search/index.html
@@ -269,7 +269,7 @@
 							style="display: flex;align-items: center;align-content: center;justify-content: center;justify-items: center;flex-direction: column">
 							<div style="font-size: 16pt;color: red" id="ntime">16:00-16:30</div>
 							<div style="font-size: 22pt;color: red" id="time">个人情况预约</div>
-							<div id="qrcode_4045" class="animate__animated animate__bounce animate__infinite"></div>
+							<div id="qrcode_4045" class="animate__animated animate__wobble animate__infinite"></div>
 						</div>
 							<div class="bg-icon"></div>
 						</div>
